--- a/resources/dotfiles/.config/neofetch/config.conf
+++ b/resources/dotfiles/.config/neofetch/config.conf
@@ -639,7 +639,7 @@ image_backend="ascii"
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
 #image_source="auto"
-image_source="$HOME/.config/neofetch/img"
+image_source="/opt/qxdc/neofetch/img"
 
 # Ascii Options
 
